# gnome-getting-started-docs

./: .gitignore  .gitlab-ci.yml  AUTHORS  COPYING  MAINTAINERS  Makefile.am  NEWS  README  autogen.sh  check.sh  configure.ac  configure.in  gnome-getting-started-docs.doap  mknews
animation/: generate-languages.sh  gnome-change-wallpaper.blend  gnome-change-wallpaper.py  gnome-launching-applications.blend  gnome-launching-applications.py  gnome-responding-to-messages.blend  gnome-responding-to-messages.py  gnome-task-switching.blend  gnome-task-switching.py  gnome-timezone.blend  gnome-timezone.py  gnome-windows-and-workspaces.blend  gnome-windows-and-workspaces.py  gnome-yelp-intro.blend  gnome-yelp-intro.py  gnomerender.py  language-whitelist.txt  part-kbd-launch-help.blend  render-localized.sh  translations.xml  update-translations.sh
animation/po/: cs-CZ.po  en-US.po
animation/snd/: AUTHORS
animation/thumbs/: render-thumbs.py
animation/translations/: cs-CZ.xml  en-US.xml
figures/: gs-thumb-responding-to-messages.svg.stub  render-figures.py  render-figures.rb
getting-started/: Makefile.am
getting-started/C/: animation.xml  apps.page  browse-web.page  change-time.page  change-wallpaper.page  getting-started.page  google-account.page  index.page  install-software.page  launch-apps.page  launch-browser.page  launching-apps.page  move-windows.page  online-accounts.page  online.page  play-media.page  responding-to-messages.page  search-apps.page  search-apps.patch  search.page  switching-tasks.page  use-search.page
getting-started/C/custom-video-controls/: apps.html  change-wallpaper.html  google account.html  index.html  install-software.html  online.html  search.html  shell-overview.html  yelp.js
getting-started/C/custom-video-controls/acornmediaplayer/: jquery.acornmediaplayer.js
getting-started/C/custom-video-controls/acornmediaplayer/themes/darkglass/: acorn.darkglass.css
getting-started/C/figures/: changing-wallpaper.webm  gnome-change-wallpaper.webm  gnome-launching-applications.webm  gnome-responding-to-messages.webm  gnome-task-switching.webm  gnome-timezone.webm  gnome-windows-and-workspaces.webm  gnome-yelp-intro.webm  responding-to-messages.webm  scrolling-touch.webm  yelp-intro.webm
getting-started/cs/: cs.po
getting-started/cs/figures/: changing-wallpaper.webm  gnome-change-wallpaper.webm  gnome-launching-applications.webm  gnome-responding-to-messages.webm  gnome-task-switching.webm  gnome-windows-and-workspaces.webm  gnome-yelp-intro.webm  yelp-intro.webm
getting-started/el/: el.po
getting-started/es/: es.po
getting-started/gl/: gl.po
getting-started/id/: id.po
getting-started/pl/: pl.po
getting-started/pt_BR/: pt_BR.po
gnome-help/: Makefile.am  fa.po
gnome-help/C/: animation.xml  browse-web.page  change-time.page  change-wallpaper.page  getting-started.page  gs-animation.xml  gs-browse-web-firefox.page  gs-browse-web.page  gs-change-date-time-timezone.page  gs-change-wallpaper.page  gs-connect-online-accounts.page  gs-get-applications.page.stub  gs-get-online.page  gs-launch-applications.page  gs-respond-messages.page  gs-switch-tasks.page  gs-use-system-search.page  gs-use-windows-workspaces.page  index.page  install-software.page.stub  launch-apps.page  move-windows.page  responding-to-messages.page  switching-tasks.page  use-search.page
gnome-help/C/figures/: gnome-change-wallpaper.webm  gnome-launching-applications.webm  gnome-responding-to-messages.webm  gnome-task-switching.webm  gnome-timezone.webm  gnome-windows-and-workspaces.webm  gnome-yelp-intro.webm
gnome-help/C/gs-goa1/: index.html
gnome-help/as/: as.po
gnome-help/ca/: ca.po
gnome-help/cs/: cs.po
gnome-help/cs/figures/: gnome-change-wallpaper.webm  gnome-launching-applications.webm  gnome-task-switching.webm  gnome-timezone.webm  gnome-windows-and-workspaces.webm
gnome-help/da/: da.po
gnome-help/de/: de.po
gnome-help/de/figures/: gnome-change-wallpaper.webm  gnome-launching-applications.webm  gnome-responding-to-messages.webm  gnome-task-switching.webm  gnome-timezone.webm  gnome-windows-and-workspaces.webm  gnome-yelp-intro.webm
gnome-help/el/: el.po
gnome-help/eo/: eo.po
gnome-help/es/: es.po
gnome-help/es/figures/: gnome-change-wallpaper.webm  gnome-launching-applications.webm  gnome-responding-to-messages.webm  gnome-task-switching.webm  gnome-timezone.webm  gnome-windows-and-workspaces.webm  gnome-yelp-intro.webm
gnome-help/fa/: fa.po
gnome-help/fi/: fi.po
gnome-help/fr/: fr.po
gnome-help/gl/: gl.po
gnome-help/gl/figures/: gnome-change-wallpaper.webm  gnome-launching-applications.webm  gnome-responding-to-messages.webm  gnome-task-switching.webm  gnome-timezone.webm  gnome-windows-and-workspaces.webm  gnome-yelp-intro.webm
gnome-help/gu/: gu.po
gnome-help/he/: he.po
gnome-help/hi/: hi.po
gnome-help/hr/: hr.po
gnome-help/hu/: hu.po
gnome-help/id/: id.po
gnome-help/it/: it.po
gnome-help/ja/: ja.po
gnome-help/kn/: kn.po
gnome-help/ko/: ko.po
gnome-help/lt/: lt.po
gnome-help/lv/: lv.po
gnome-help/mr/: mr.po
gnome-help/nl/: gnome-getting-started-docs-master-getting-started-nl-491517.merged.po  nl.po
gnome-help/pa/: pa.po
gnome-help/pl/: pl.po
gnome-help/pl/figures/: gnome-change-wallpaper.webm  gnome-launching-applications.webm  gnome-responding-to-messages.webm  gnome-task-switching.webm  gnome-timezone.webm  gnome-windows-and-workspaces.webm  gnome-yelp-intro.webm
gnome-help/pt/: pt.po
gnome-help/pt_BR/: pt_BR.po
gnome-help/pt_BR/figures/: gnome-change-wallpaper.webm  gnome-launching-applications.webm  gnome-responding-to-messages.webm  gnome-task-switching.webm  gnome-timezone.webm  gnome-windows-and-workspaces.webm  gnome-yelp-intro.webm
gnome-help/ro/: ro.po
gnome-help/ru/: ru.po
gnome-help/sk/: sk.po
gnome-help/sr/: sr.po
gnome-help/sr@latin/: sr@latin.po
gnome-help/sv/: sv.po
gnome-help/ta/: ta.po
gnome-help/te/: te.po
gnome-help/uk/: uk.po
gnome-help/zh_HK/: zh_HK.po
gnome-help/zh_TW/: zh_TW.po
player/: Makefile.am  player.c
