AC_INIT([gnome-getting-started-docs], [3.18.2],
        [https://bugzilla.gnome.org/enter_bug.cgi?product=gnome-getting-started])
AM_INIT_AUTOMAKE([1.11 tar-ustar dist-xz no-dist-gzip])
AM_SILENT_RULES([yes])

YELP_HELP_INIT

AM_MAINTAINER_MODE([enable])

AC_CONFIG_FILES([
Makefile
gnome-help/Makefile
])
AC_OUTPUT
