AC_INIT([gnome-getting-started-docs], [3.22.0],
        [https://bugzilla.gnome.org/enter_bug.cgi?product=gnome-getting-started])
AM_INIT_AUTOMAKE([1.11 check-news tar-ustar dist-xz no-dist-gzip])
AM_SILENT_RULES([yes])

YELP_HELP_INIT

AM_MAINTAINER_MODE([enable])

AC_CONFIG_FILES([
Makefile
gnome-help/Makefile
])
AC_OUTPUT
