AC_INIT([gnome-getting-started-docs], [3.32.1],
        [https://gitlab.gnome.org/GNOME/gnome-getting-started-docs/issues])
AM_INIT_AUTOMAKE([1.11 check-news tar-ustar dist-xz no-dist-gzip foreign])
AM_SILENT_RULES([yes])

YELP_HELP_INIT

AM_MAINTAINER_MODE([enable])

AC_CONFIG_FILES([
Makefile
gnome-help/Makefile
])
AC_OUTPUT
