@YELP_HELP_RULES@

HELP_ID = getting-started

HELP_LINGUAS = cs

HELP_MEDIA = \
	figures/changing-wallpaper.png \
	figures/changing-wallpaper.webm \
	figures/launching-apps.png \
	figures/launching-apps.webm \
	figures/responding-to-messages.png \
	figures/responding-to-messages.webm \
	figures/task-switching.png \
	figures/task-switching.webm \
	figures/windows-and-workspaces.png \
	figures/windows-and-workspaces.webm

HELP_FILES = \
	animation.xml \
	legal.xml \
	browse-web.page \
	change-wallpaper.page \
	change-time.page \
	goa1.svg \
	goa2.svg \
	goa3.svg \
	goa4.svg \
	goa5.svg \
	index.page \
	install-software.page \
	launch-apps.page \
	move-windows.page \
	online-accounts.page \
	online.page \
	responding-to-messages.page \
	search1.svg \
	search2.svg \
	search-settings.svg \
	switching-tasks.page \
	use-search.page \
	web-browser1.svg \
	web-browser2.svg

