@YELP_HELP_RULES@

HELP_ID = getting-started

HELP_LINGUAS = cs es id

HELP_MEDIA = \
	figures/changing-wallpaper.png \
	figures/gnome-change-wallpaper.webm \
	figures/launching-apps.png \
	figures/gnome-launching-applications.webm \
	figures/responding-to-messages.png \
	figures/gnome-responding-to-messages.webm \
	figures/task-switching.png \
	figures/gnome-task-switching.webm \
	figures/windows-and-workspaces.png \
	figures/gnome-windows-and-workspaces.webm \
	figures/gnome-yelp-intro.webm

HELP_FILES = \
	animation.xml \
	legal.xml \
	browse-web.page \
	change-wallpaper.page \
	change-time.page \
	goa1.svg \
	goa2.svg \
	goa3.svg \
	goa4.svg \
	goa5.svg \
	go-online1.svg \
	go-online2.svg \
	go-online3.svg \
	index.page \
	install-software.page \
	launch-apps.page \
	move-windows.page \
	online-accounts.page \
	online.page \
	responding-to-messages.page \
	search1.svg \
	search2.svg \
	search-settings.svg \
	switching-tasks.page \
	use-search.page \
	web-browser1.svg \
	web-browser2.svg

