@YELP_HELP_RULES@

HELP_ID = getting-started

HELP_LINGUAS = cs es id

HELP_MEDIA = \
	figures/gnome-change-wallpaper.webm \
	figures/gnome-launching-applications.webm \
	figures/gnome-responding-to-messages.webm \
	figures/gnome-task-switching.webm \
	figures/gnome-windows-and-workspaces.webm \
	figures/gnome-yelp-intro.webm

HELP_FILES = \
	animation.xml \
	legal.xml \
	browse-web.page \
	change-wallpaper.page \
	change-time.page \
	goa1.svg \
	goa2.svg \
	goa3.svg \
	goa4.svg \
	goa5.svg \
	go-online1.svg \
	go-online2.svg \
	go-online3.svg \
	index.page \
	install-software.page \
	launch-apps.page \
	move-windows.page \
	online-accounts.page \
	online.page \
	responding-to-messages.page \
	search1.svg \
	search2.svg \
	search-settings.svg \
	switching-tasks.page \
	thumb-changing-wallpaper.svg \
	thumb-launching-apps.svg \
	thumb-responding-to-messages.svg \
	thumb-task-switching.svg \
	thumb-windows-and-workspaces.svg \
	use-search.page \
	web-browser1.svg \
	web-browser2.svg

