@YELP_HELP_RULES@

HELP_ID = gnome-help

HELP_LINGUAS = as ca cs de el es fr gl gu hu id it ja mr pa pl pt_BR ru sk ta

HELP_MEDIA = \
	figures/gnome-change-wallpaper.webm \
	figures/gnome-launching-applications.webm \
	figures/gnome-responding-to-messages.webm \
	figures/gnome-task-switching.webm \
	figures/gnome-timezone.webm \
	figures/gnome-windows-and-workspaces.webm \
	figures/gnome-yelp-intro.webm

# Please ASK MAINTAINERS first before updating the HELP_FILES list below.
# Keep in mind that some files are missing on purpose.

HELP_FILES = \
	getting-started.page \
	gs-animation.xml \
	gs-browse-web.page \
	gs-browse-web-firefox.page \
	gs-change-date-time-timezone.page \
	gs-change-wallpaper.page \
	gs-connect-online-accounts.page \
	gs-get-online.page \
	gs-goa1.svg \
	gs-goa2.svg \
	gs-goa3.svg \
	gs-goa4.svg \
	gs-goa5.svg \
	gs-go-online1.svg \
	gs-go-online2.svg \
	gs-go-online3.svg \
	gs-launch-applications.page \
	gs-legal.xml \
	gs-respond-messages.page \
	gs-search1.svg \
	gs-search2.svg \
	gs-search-settings.svg \
	gs-switch-tasks.page \
	gs-thumb-changing-wallpaper.svg \
	gs-thumb-launching-apps.svg \
	gs-thumb-responding-to-messages.svg \
	gs-thumb-task-switching.svg \
	gs-thumb-timezone.svg \
	gs-thumb-windows-and-workspaces.svg \
	gs-use-system-search.page \
	gs-use-windows-workspaces.page \
	gs-web-browser1-firefox-classic.svg \
	gs-web-browser1-firefox.svg \
	gs-web-browser1.svg \
	gs-web-browser2-firefox.svg \
	gs-web-browser2.svg

