@YELP_HELP_RULES@

HELP_ID = gnome-help

HELP_LINGUAS = as ca cs da de el eo es fa fi fr gl gu he hi hr hu id it ja kn ko lt lv mr nl pa pl pt pt_BR ro ru sk sr sr@latin sv ta te zh_HK zh_TW

HELP_MEDIA = \
	figures/gnome-launching-applications.webm \
	figures/gnome-task-switching.webm \
	figures/gnome-windows-and-workspaces.webm

# Please ASK MAINTAINERS first before updating the HELP_FILES list below.
# Keep in mind that some files are missing on purpose.

HELP_FILES = \
	getting-started.page \
	gs-animation.xml \
	gs-browse-web.page \
	gs-change-date-time-timezone.page \
	gs-connect-online-accounts.page \
	gs-datetime.svg \
	gs-get-online.page \
	gs-goa1.svg \
	gs-goa2.svg \
	gs-goa4.svg \
	gs-goa5.svg \
	gs-go-online1.svg \
	gs-go-online2.svg \
	gs-go-online3.svg \
	gs-launch-applications.page \
	gs-legal.xml \
	gs-search1.svg \
	gs-search2.svg \
	gs-search-settings.svg \
	gs-switch-tasks.page \
	gs-thumb-launching-apps.svg \
	gs-thumb-task-switching.svg \
	gs-thumb-windows-and-workspaces.svg \
	gs-use-system-search.page \
	gs-use-windows-workspaces.page \
	gs-web-browser1-firefox-classic.svg \
	gs-web-browser1-firefox.svg \
	gs-web-browser1.svg \
	gs-web-browser2-firefox.svg \
	gs-web-browser2.svg

